# toolkit-inference-mesh

./: .env.example  AUDIT_REPORT_TOOLKIT_ADDITIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  TOOLKIT_ENHANCEMENTS.md  TOOLKIT_EXTENSIONS_ROADMAP.md  UPSTREAM.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: CONTRIBUTING.md
docs/user_guide/: install.md  quick_start.md
src/backend/: main.py
src/backend/benchmark/: benchmark_serving.py
src/backend/server/: request_handler.py  rpc_connection_handler.py  server_args.py  toolkit_event_log.py
src/parallax/: cli.py
src/parallax/p2p/proto/: forward_pb2.py
src/parallax/server/: node_chat_http_server.py  shard_loader.py
src/parallax/server/executor/: mlx_executor.py  vllm_executor.py
src/parallax/sglang/: model_runner.py
src/parallax/utils/: selective_download.py
src/parallax/vllm/: model_runner.py
src/parallax_utils/: ascii_anime.py  version_check.py
src/scheduling/: request_routing.py
tests/: conftest.py  test_akiva_enhancements.py  test_dependency_check.py  test_http_handler.py  test_paged_attention.py  test_paged_kv_integration.py
