[build-system]
requires = ["setuptools>=68", "wheel", "poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "toolkit-inference-mesh"
version = "0.1.2"
description = "Inference Mesh (fork of Parallax): decentralised pipeline-parallel LLM serving with SGLang + MLX-LM + Lattica"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
  "msgpack>=1.0.7",
  "safetensors>=0.5.1",
  "huggingface-hub",
  "transformers==4.57.1",
  "jinja2>=3.1.0",
  "numpy>=1.26",
  "pyzmq>=25.0",
  "psutil>=5.9.5",
  "httpx[socks]>=0.26.0",
  "aiohttp",
  "uvicorn",
  "uvloop",
  "fastapi",
  "pydantic",
  "protobuf==6.31.1",
  "dijkstar==2.6.0",
  "lattica==1.0.14",
  "orjson",
]

[project.scripts]
toolkit-mesh = "parallax.cli:main"
parallax = "parallax.cli:main"

[project.urls]
Homepage = "https://github.com/AKIVA-AI/toolkit-inference-mesh"
Repository = "https://github.com/AKIVA-AI/toolkit-inference-mesh"
Documentation = "https://github.com/AKIVA-AI/toolkit-inference-mesh#readme"
"Bug Tracker" = "https://github.com/AKIVA-AI/toolkit-inference-mesh/issues"

[project.optional-dependencies]

mac = [
  "torch==2.8.0",
  "mlx-lm==0.28.4",
  "mlx==0.30.0",
]

gpu = [
  "sglang[all]==0.5.5",
  "mlx-lm==0.28.4",
  "mlx[cpu]==0.30.0",
]

vllm = [
  "vllm==0.11.0",
  "mlx-lm==0.28.4",
  "mlx[cpu]==0.30.0",
]

benchmark = [
  "transformers",
  "tqdm",
  "datasets",
  "pillow",
  "modelscope",
]

dev = [
  "black>=24.3",
  "ruff>=0.4",
  "pytest>=8.2",
  "pytest-mock>=3.14",
  "pytest-cov>=5.0",
  "pre-commit>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["parallax*", "parallax_utils*", "scheduling*", "backend*", "frontend*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
ignore = ["E501"]
line-length = 100
